--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 body {
     background-color: rgb(129, 162, 233);
     margin-left: 30px;
+    margin-right: 30px;
+    text-align: center ;
+
 }
 
 h1 {
@@ -9,55 +12,46 @@ font-size: 40px;
 }
 
 h2{font-size: 25px;
-color: indigo;}
+color: indigo;
+}
 
-.flexbox-container {
+.flexbox-container {padding: 0px;}
+
+.flexbox-item {
+    border: red 2px solid; margin: 30px;}
+
+.c1 {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: space-between;
 }
-.flexbox-item {
-    width: 350px;
-    height: 400px;
-}
+
+
 a {
     display: block;
-    text-decoration: none;}
-.one {
-    flex-shrink: 0;
-    flex-grow: 2;
-    
-}
+    text-decoration: none;
+font-size: 30px;}
 
-.two {flex-grow: 2;
-flex-shrink: 1;
+.eight, .six, .one {width: 400px;}
 
-}
+ .five, .seven {width: 250px;}
 
-.eight {align-self:baseline}
-
-
-.three {
-    flex-shrink: 0;
-    flex-grow: 0;
-   
-}
+.two {width:400px;}
 
 .c2 {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     justify-content:center space-between;
-    flex-direction: row-reverse;
 }
 
-.four, .five, .six {
-flex-shrink: 2;}
 
 .c3 {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    justify-content:flex-end;
+    
 }
+
+p {font-size: 25px;}
