--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
-    background-color: rgb(129, 162, 233);
+    background-image: url(BG.png);
+    background-size: cover;
     margin-left: 30px;
     margin-right: 30px;
     text-align: center ;
@@ -12,13 +13,15 @@ font-size: 40px;
 }
 
 h2{font-size: 25px;
-color: indigo;
+color: rgb(1, 3, 5);
 }
 
 .flexbox-container {padding: 0px;}
 
 .flexbox-item {
-    border: red 2px solid; margin: 30px;}
+    
+    margin: 30px;
+}
 
 .c1 {
     display: flex;
@@ -33,9 +36,11 @@ a {
     text-decoration: none;
 font-size: 30px;}
 
+.two, .three, .five, .seven {border: slateblue 8px groove; background-color: seashell;}
+
 .eight, .six, .one {width: 400px;}
 
- .five, .seven {width: 250px;}
+ .five, .seven {width: 280px;}
 
 .two {width:400px;}
 
@@ -44,6 +49,7 @@ font-size: 30px;}
     flex-wrap: wrap;
     flex-direction: row;
     justify-content:center space-between;
+    align-items:flex-start;
 }
 
 
