--- a/Advanced.css
+++ b/Advanced.css
@@ -14,7 +14,7 @@ font-style:italic;}
 
 .text {font-family:Impact;}
 
-.BOB {color: orange; font-weight:; font-size: 20px;} 
+.BOB {color: orange; font-weight: bold; font-size:2%;} 
 
 .list {list-style-type: lower-greek;}
 
